messed around with the site color palette to ensure it passes the color contrast checker

--- a/scss/_settings.variables.scss
+++ b/scss/_settings.variables.scss
@@ -33,7 +33,7 @@ $card-btn-bottom: #bfd3c3;
 }
 
 .text_color2 {
-    color: #8b8c88;
+    color: #54544F;
 }
 
 .text_color3 {
@@ -54,7 +54,7 @@ $card-btn-bottom: #bfd3c3;
 }
 
 .background_color2 {
-    background-color: #8b8c88;
+    background-color: #54544F;
 }
 
 .background_color3 {
@@ -75,7 +75,7 @@ $card-btn-bottom: #bfd3c3;
 }
 
 .border_color2 {
-    border-color: #8b8c88;
+    border-color: #54544F;
 }
 
 .border_color3 {
